--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="#">Impressoras térmicas</a>
         <a href="#">Esteira de aferição</a>
         <a href="#">Dimensionador</a>
+        <a href="#">Esteira Flexível</a>
     </nav>
 
     <main>
@@ -35,17 +36,9 @@
                 <a href="#"><img src="imagens/impressoras.png" alt="Atendimentos"></a>
                 <p> <a href="#">Dimensionador</a> </p>
             </div>
-            <div>
+            <div id="esteira_flexivel">
                 <a href="#"><img src="imagens/impressoras.png" alt="Atendimentos"></a>
-                <p> <a href="#">Impressoras térmicas</a> </p>
-            </div>
-            <div>
-                <a href="#"><img src="imagens/impressoras.png" alt="Atendimentos"></a>
-                <p> <a href="#">Impressoras térmicas</a> </p>
-            </div>
-            <div>
-                <a href="#"><img src="imagens/impressoras.png" alt="Atendimentos"></a>
-            <p> <a href="#">Impressoras térmicas</a> </p>
+                <p> <a href="#">Esteira Flexível</a> </p>
             </div>
         </article>
     </main>
