--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
 
     <main>
         <h1>Atendimento às Filiais</h1>
+        <section id="impressoras-termicas">
+            <img src="./imagens/impressoras.png" alt="impressoras-termicas">
+            <p>Impressoras Térmicas</p>
+        </section>
+
+        <section id="esteira-de-afericao">
+            <img src="./imagens/impressoras.png" alt="impressoras-termicas">
+            <p>Esteira de Aferição</p>
+        </section>
+
+        <section id="dimensionador">
+            <img src="./imagens/impressoras.png" alt="impressoras-termicas">
+            <p>Dimensionador</p>
+        </section>
+
+        <section id="esteira-flexivel">
+            <img src="./imagens/impressoras.png" alt="impressoras-termicas">
+            <p>Esteira Flexível</p>
+        </section>
     </main>
 </body>
 </html>
